--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -44,10 +44,19 @@
         <div class="footerref">
             <div class="textmain">
                 <div id="about">
-                    <h2>О нашем сайте</h2>
-                    <p>Мир сошел с ума. Постепенно, потихоньку набирая обороты, уверенно и не спеша. Мир сошел с ума, и мы должны принять этот факт без излишней драматизации. Может произойти так, что третьей мировой не избежать. Может быть, Путин вскоре аннексирует что-нибудь еще, а цены в Ашане подскочат сильнее нынешнего. Может быть, мы все живем в параллельном мире, когда в реальности соблюдаются библейские заветы, а в рандомном подъезде рандомной пятиэтажки на окраине Москвы слушают не АК-47, а Моцарта. Мы можем лишь наблюдать то, что видим и что чувствуем. Порою – пытаться что-то изменить. Именно для перемен мы создали <b>ZenSick</b>, и пусть это заявление звучит претенциозно и пафосно. Надеемся, что не зря.</p>
-<p><b>ZenSick</b> – это вчерашний подросток, который витает в облаках, грезит абсурдными идеями и возможностями, но может наткнуться на острые скалы действительности. Это романтический герой, который вот-вот расправит крылья и полетит навстречу приключениям. Но вот и занавес, титры. «To be continued».</p> 
-                    <p>Следующий эпизод уже на подходе.</p>
+                    <h2>FAQ</h2>
+                    <p><b>Q:</b> Кто вы такие?</p>
+                    <p><b>A:</b> Мы - группа людей, которая стремится поделиться с читателем своим мнением по поводу происходящего в мире, передать свое впечатление от новой музыки или только что прочитанной книги. Иногда просто пишем о наболевшем. </p>
+
+                    <p><b>Q:</b> А это разве не просто очередной коллективный блог? </p>
+                    <p><b>A:</b> Мы пока сами не знаем. Сейчас занимаемся сайтом и публикуем то, что нам интересно, в обозримом будущем начнем выпускать полноценный журнал. </p>
+
+                    <p><b>Q:</b> Насколько часто будет выходить новый контент? </p>
+                    <p><b>A:</b> Первое время - 3-4 статей еженедельно, потом будем писать чаще. </p>
+
+                    <p><b>Q:</b> Мне тоже хочется писать статьи про то, что мне нравится. Можно ли будет публиковаться у вас? </p>
+                    <p><b>A:</b> А почему нет? Напишите нам на почту, адрес указан чуть ниже. </p>
+
                 </div>
                 <div id="authors">
                     <h2>Авторы</h2>
@@ -57,7 +66,6 @@
                                 <p>Desyu Rinsu <a href="https://twitter.com/rinsdesyu">@rinsdesyu</a></p>
                                 <p>А. Соколов <a href="https://twitter.com/andre_sokol">@andre_sokol</a></p>
                                 <p>И. Овсянников </p>
-                                <p>Анна Поздеева</p>
                         </div>
                 </div>
 					
