--- a/templates/pages/tagsearch.ejs
+++ b/templates/pages/tagsearch.ejs
@@ -99,7 +99,7 @@ style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" tit
         </div>
         <div class="lowbar">
             <ul>
-                <li><a href="/about#about">About</a></li>
+                <li><a href="/about#about">FAQ</a></li>
                 <li><a href="/about#authors">Authors</a></li>
                 <li><a href="/about#contact">Contact Us</a></li>
                 <li><p>©Zen Sick Webzin. 2015.</p></li>
