Added guideline, small fixes

--- a/templates/admin/add_new_post.ejs
+++ b/templates/admin/add_new_post.ejs
@@ -28,12 +28,18 @@
 		}
 		.article {
 			width: 100%;
+			margin-top: 2vh;
+			margin-bottom: 2vh;
 		}
-		.col2 {
+		/*.col2 {
 			margin-bottom: 15px;
-		}
+		}*/
 		textarea {
 			resize: none;
+		}
+		#edit {
+			height: 100vh;
+			overflow-y: auto;
 		}
 	</style>
     <title>Новый пост - ZenSick</title>
