--- a/templates/admin/index.ejs
+++ b/templates/admin/index.ejs
@@ -5,8 +5,9 @@
 <style>
 	.body>div {
 		max-height: 300px;
-		max-width: 100%;
+		max-width: 70vw;
 		overflow-y: auto;
+		overflow-x: auto;
 	}
 	
 	.time {
