Button on admins reworked

--- a/templates/admin/guideline.ejs
+++ b/templates/admin/guideline.ejs
@@ -12,7 +12,7 @@
         <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
 		<script src="/public/js/SlickNav-master/jquery.slicknav.js"></script>
 		<link href="/public/slicknav.css" rel="stylesheet" type="text/css">
-        <title>Мануал по написанию постов - Zen Sick</title>
+        <title>Гайдлайн - Zen Sick</title>
     </head>
     <body>
         <div class="column">
