--- a/templates/admin/edit_post.ejs
+++ b/templates/admin/edit_post.ejs
@@ -13,6 +13,21 @@
 	<link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="/public/js/marked.js"></script>
+	
+	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+
+	<script>
+		var username = '<%- username %>';
+	</script>
+
+	<script>
+		$(document).ready(function() {
+			var socket = io();
+			
+			socket.emit('start_editing', {user: username, id: 'p' + <%- post.id %>});
+		});
+	</script>
+	
 	<style>
 		body {
 			height:100vh;
