--- a/templates/test.ejs
+++ b/templates/test.ejs
@@ -1,10 +1,24 @@
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+
+<script>
+	var username = <%- username %>;
+</script>
+
 <script>
 	$(document).ready(function() {
+		var socket = io();
+		
 		$(".title_cnt").click(function() {
 			$(this).parent().children('.dropdown_cnt').toggleClass("dropdown_cnt_hidden");
+			socket.emit('tab', $(this).attr('id'));
+			console.log($(this).attr('id'));
+		});
+		
+		socket.on('tab', function(id) {
+			$('#' + id).parent().children('.dropdown_cnt').toggleClass("dropdown_cnt_hidden");
 		});
 	});
 </script>
@@ -110,7 +124,7 @@
 	<% for(var i = 0; i < posts.length; i++) { %>
 	<% if(!posts[i].visible) continue; %>
 	<div class="post_cnt">
-		<div class="title_cnt">
+		<div class="title_cnt" id='p<%- posts[i].id %>'>
 			<div class="id"><%- posts[i].id %></div>
 			<div class="title"><%- posts[i].title %></div>
 			<div class="author"><%- posts[i].author %></div>
@@ -138,7 +152,7 @@
 	<% for(var i = 0; i < posts.length; i++) { %>
 	<% if(posts[i].visible) continue; %>
 	<div class="post_cnt">
-		<div class="title_cnt">
+		<div class="title_cnt" id='p<%- posts[i].id %>'>
 			<div class="id"><%- posts[i].id %></div>
 			<div class="title"><%- posts[i].title %></div>
 			<div class="author"><%- posts[i].author %></div>
