--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -45,16 +45,16 @@
             <div class="textmain">
                 <div id="about">
                     <h2>FAQ</h2>
-                    <p><b>Q:</b> Кто вы такие?</p>
+                    <p><b>Q: Кто вы такие?</p></b>
                     <p><b>A:</b> Мы - группа людей, которая стремится поделиться с читателем своим мнением по поводу происходящего в мире, передать свое впечатление от новой музыки или только что прочитанной книги. Иногда просто пишем о наболевшем. </p>
 
-                    <p><b>Q:</b> А это разве не просто очередной коллективный блог? </p>
+                    <p><b>Q: А это разве не просто очередной коллективный блог? </p></b>
                     <p><b>A:</b> Мы пока сами не знаем. Сейчас занимаемся сайтом и публикуем то, что нам интересно, в обозримом будущем начнем выпускать полноценный журнал. </p>
 
-                    <p><b>Q:</b> Насколько часто будет выходить новый контент? </p>
+                    <p><b>Q: Насколько часто будет выходить новый контент? </p></b>
                     <p><b>A:</b> Первое время - 3-4 статей еженедельно, потом будем писать чаще. </p>
 
-                    <p><b>Q:</b> Мне тоже хочется писать статьи про то, что мне нравится. Можно ли будет публиковаться у вас? </p>
+                    <p><b>Q: Мне тоже хочется писать статьи про то, что мне нравится. Можно ли будет публиковаться у вас? </p></b>
                     <p><b>A:</b> А почему нет? Напишите нам на почту, адрес указан чуть ниже. </p>
 
                 </div>
