--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url(/public/img/teentimesbg2.png);  
+    /*background-image: url(/public/img/teentimesbg2.png);  */
+    background-image: url(/gen/wallpaper);
     background-size: auto;
     background-repeat: auto;
 }
