--- a/templates/404.ejs
+++ b/templates/404.ejs
@@ -10,6 +10,6 @@
 
 <body class="nfound">
     <div class="nfound1">
-        <a href="/"><img src="/public/img/404.png"/></a>
+        <a href="/"><img src="/public/img/404/404.png"/></a>
     </div>
 </body> 
