--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -19,4 +19,4 @@
 		});
 	});
 </script>
-<link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
+<link rel="shortcut icon" href="/public/img/icons/favicon1.png" type="image/png">
