--- a/public/main.css
+++ b/public/main.css
@@ -686,7 +686,7 @@ img + strong /* former #imgcap */ {
     }
     .nfound {
         background-color: #AEAEAE;
-        background-image: url(img/404.png)!important;
+        background-image: url(img/404/404.png)!important;
         background-size: cover;
     }   
     .nfound a img {
