--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -1,45 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
-        <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-        <link rel="stylesheet" type="text/css" href="/public/main.css">
-        <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="/public/js/main.js"></script>
-        <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
-		<script src="/public/js/SlickNav-master/jquery.slicknav.js"></script>
-		<link href="/public/slicknav.css" rel="stylesheet" type="text/css">
-		<script>
-			$(function () {
-				$('#nyaa').slicknav({
-					prependTo: '#nav_bar',
-					label: ''
-				});
-			});
-		</script>
+        <%- block_header %>
         <title><%- post.title %> - Zen Sick</title>
     </head>
     <body>
-        <div class="bars">
-            <div class="NavBar" id="nav_bar">
-                <div id="zensick">
-                    <a href="/"><img src="/public/img/nav1.png"></a>
-                </div>
-                    <ul id="nyaa">
-                        <li><div id="hyperlink"><a href="/">Zen Sick</a></div></li>
-                        <li><a href="/img">ART</a></li>
-                        <li><a href="/music">MUSIC</a></li>
-                        <li><a href="/literature">LITERATURE</a></li>
-                        <li><a href="/article">ARTICLES</a></li>
-                    </ul>
-            </div>
-        </div>
-		
-		<div class="bars" style="opacity:0; height:50px;">this must be invisible</div>
+        
+        <%- block_navbarart %>
 		
         <div class="column">
             <div class="<%- post.type %>">
