Reworked render again :/

--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <%- block_header %>
+        ###header###
         <title>Information - Zen Sick</title>
     </head>
     <body>
-        <%- block_navbarart %>
+        ###navbarart###
         <div class="footerref">
             <div class="textmain">
                 <div id="about">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="bars">
-			<%- block_footer %>
+			###footer###
         </div>
     </body>
 </html>
