--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <%- block_header %>
+        ###header###
         <title><%- post.title %> - Zen Sick</title>
     </head>
     <body>
         
-        <%- block_navbarart %>
+        ###navbarart###
 		
         <div class="column">
             <div class="<%- post.type %>">
