--- a/templates/pages/hub.ejs
+++ b/templates/pages/hub.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <%- block_header %>
+    ###header###
     <title><%- hub %> - Zen Sick</title>
 </head>
 <body>
-    <%- block_navbarmain %>
+    ###navbarmain###
     <div class="bars">
         <div class="Header">
             <h1><a href="/">Zen Sick</a></h1>
@@ -34,10 +34,10 @@
     <div class="bars">
         
         <!-- page buttons -->       
-        <%- block_pagebar %>
+        ###pagebar###
         <!-- end of page buttons -->
         
-        <%- block_footer %>
+        ###footer###
     </div>
 </body>
 </html>
