--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -2,11 +2,11 @@
 <html>
 <head>
     <!-- nyaa nyaa http://www.youtube.com/watch?v=Am12GlkJktc -->
-    <%- block_header %>
+    ###header###
     <title>Zen Sick</title>
 </head>
 <body>
-    <%- block_navbarmain %>
+    ###navbarmain###
     <div class="bars">
         <div class="Header">
             <h1><a href="/">Zen Sick</a></h1>
@@ -35,10 +35,10 @@
     <div class="bars">
         
         <!-- page buttons -->       
-        <%- block_pagebar %>
+        ###pagebar###
         <!-- end of page buttons -->
         
-        <%- block_footer %>
+        ###footer###
     </div>
 </body>
 </html>
