--- a/templates/pages/tagsearch.ejs
+++ b/templates/pages/tagsearch.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <%- block_header %>
+    ###header###
     <title>#<%- tag %> - Zen Sick</title>
 </head>
 <body>
-    <%- block_navbarmain %>
+    ###navbarmain###
     <div class="bars">
         <div class="Header">
             <h1><a href="/">Zen Sick</a></h1>
@@ -29,7 +29,7 @@
     <!-- end of template thingy -->
 	
 	<div class="bars">
-        <%- block_footer %>
+        ###footer###
     </div>
 </body>
 </html>
